# gmdkit

./: README.md  index.rst  pyproject.toml  text.txt  untitled0.py
.github/workflows/: docs.yml  pypi.yml  pytest.yml  sheets.yml
data/csv/: class_table.csv  hitbox_table.csv  level_table.csv  list_table.csv  member_table.csv  object_table.csv  prop_table.csv  remap_table.csv
data/gmd/official/: Airborne Robots.gmd  Back On Track.gmd  Base After Base.gmd  Blast Processing.gmd  Cant Let Go.gmd  Clubstep.gmd  Clutterfunk.gmd  Cycles.gmd  Dash.gmd  Deadlocked.gmd  Dry Out.gmd  Electrodynamix.gmd  Electroman Adventures.gmd  Fingerdash.gmd  Geometrical Dominator.gmd  Hexagon Force.gmd  Jumper.gmd  Nock Em.gmd  Polargeist.gmd  (+14 more)
data/gmdl/: Difficulty Soup.gmdl  Easiest Demon Main List.gmdl  Elijo Creer.gmdl  Probably The Worst List.gmdl
data/gmdt/: Flappy Bouncy.gmdt  Flappy Grass.gmdt  Flappy Sticky.gmdt  Nodes.gmdt
data/json/: tabs.json
data/txt/: default.txt
docs/: conf.py
docs/source/: conf.py  index.rst
examples/: load_test.py
scripts/: build_files.py  build_utils.py  evaluate_obj_keys.py  generate_key_test.py  grab_official_levels.py  search_level_keys.py
scripts/build_scripts/: build_id_rules.py  build_list_props.py  build_lvl_props.py  build_obj_ids.py  build_obj_props.py  utils.py
scripts/data_collection/: generate_key_test.py  obj_sets.py  search_level_keys.py
scripts/test_scripts/: usage_tests.py
src/gmdkit/: __init__.py
tests/: example_level.gmd  object_test.py  temp_ai_tests.py  test_round_trip.py  time_orbit.py  usage_tests.py  utils.py
(+262 files in other folders)
