[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gmdkit"
dynamic = ["version"]
description = "A toolkit for handling Geometry Dash level data."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "HDanke" }
]
requires-python = ">=3.12"
dependencies = ["zstandard","websocket-client","typing"]
keywords = ["geometry-dash", "gmd", "levels", "parser", "editor"]

# Optional: classifiers help with PyPI visibility
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
